fixed issue undefined index, fixed hero title displacement and removed strange whitespace on the right of the homepage

--- a/assets/style/home.scss
+++ b/assets/style/home.scss
@@ -18,7 +18,7 @@ body {
   .heroTitle {
     height: 150px !important;
     margin: 0 auto;
-    max-width: 600px;
+    max-width: 630px;
     background-color: none;
     @include respond-to('tablet') {
       background-color: rgb(0,0,0,0.7) !important;
@@ -31,7 +31,7 @@ body {
         color: transparent;
         display: none;
         @include respond-to('tablet') {
-          display: block;
+          display: inline-block;
         };
       }
     }
@@ -113,7 +113,7 @@ h1 {
 //}
 
 .home-section {
-  margin: 100px 0;
+  margin: 0 0 100px 0;
   padding: 20px;
 
   .home-content {
