--- a/compiled/style.css
+++ b/compiled/style.css
@@ -95,7 +95,7 @@ footer div.footer-copyright a:hover {
 .bannerHero .heroTitle {
   height: 150px !important;
   margin: 0 auto;
-  max-width: 600px;
+  max-width: 630px;
   background-color: none;
   height: 3em;
   padding: 50px;
@@ -114,7 +114,7 @@ footer div.footer-copyright a:hover {
 }
 @media (min-width: 758px) {
   .bannerHero .heroTitle div h1 {
-    display: block;
+    display: inline-block;
   }
 }
 
@@ -153,7 +153,7 @@ h1 {
   }
 }
 .home-section {
-  margin: 100px 0;
+  margin: 0 0 100px 0;
   padding: 20px;
 }
 .home-section .home-content .home-text {
